--- a/src/foodMarket/css/style.css
+++ b/src/foodMarket/css/style.css
@@ -77,6 +77,20 @@ li.nav-item a {
 }
 
 
+.btn-close {
+    background-color: #e776a2;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    border-radius: 50px;
+    border: none;
+    font-size: 20px;
+}
+
+
 /* home page  */
 
 /* .mainBanner {
@@ -478,7 +492,16 @@ input[type="radio"]:checked {
 .cardContent h3 {
     font-weight: 600;
     margin-bottom: 5px;
-    font-size: 24px;
+    font-size: 18px;
+    text-transform: capitalize;
+}
+
+.reviewsStar span {
+    padding-left: 10px;
+}
+
+.favContent {
+    text-align: left;
 }
 
 .categoryCard {
@@ -623,8 +646,9 @@ input[type="radio"]:checked {
 }
 
 .favContent h3 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
+    text-transform: capitalize;
 }
 
 .favContent p {
@@ -1512,6 +1536,8 @@ div#accordion {
 
 .mostPopular {
     position: relative;
+    margin-bottom: 3em;
+    top: 2em;
 }
 
 .mostPopular .carousel-control-prevs{position: absolute;top: -40px;right: 50px;}
