--- a/src/foodMarket/css/style.css
+++ b/src/foodMarket/css/style.css
@@ -249,11 +249,21 @@ input[type="radio"]:checked {
     gap: 5px;
 }
 
-.orderCard {
+/* .orderCard {
     display: flex;
     justify-content: space-between;
     align-items: center;
+} */
+
+.price_qty {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
 }
+/* .price_qty p{
+    margin: 0;
+} */
 
 .orderThumnail img {
     width: 50px;
@@ -266,6 +276,7 @@ input[type="radio"]:checked {
 .orderPrice p {
     font-size: 16px;
     font-weight: 600;
+    margin: 0;
 }
 
 .orderInfo p:first-child {
@@ -1595,3 +1606,217 @@ div#accordion {
     border-radius: 50%;
     color: #000;
 }
+
+.qty-container{
+    display: flex;
+    align-items: center;
+  
+  
+    /* border: 2px solid #000f63; */
+    /* border-radius: 1px; */
+  }
+  .qty-container .input-qty {
+    text-align: center;
+    padding: 6px 10px;
+    border: 1px solid #d1d1d1;
+    max-width: 53px;
+    margin: 0 5px;
+    height: 25px;
+    border-radius: 18px;
+}
+  .qty-container .qty-btn-minus, .qty-container .qty-btn-plus {
+    /* border: 2px solid #fb4d8e; */
+    padding: 3px 5px;
+    font-size: 10px;
+    height: 25px;
+    width: 25px;
+    transition: 0.3s;
+    border-radius: 30px;
+    border: none;
+    /* color: #fb4d8e; */
+}
+  .qty-container .qty-btn-plus{
+    margin-left: -1px;
+  }
+ 
+  .qty-container i{
+      padding: 0;}
+
+
+
+
+
+
+
+
+
+
+
+
+      .login_page_section {
+        background-color: #e3e5f1;
+        padding: 70px 0px;
+    }
+    
+    .login_page{
+        background-color: #fff;
+        padding: 40px 30px;
+    }
+    
+    .login_heading {
+        display: flex;
+        justify-content: flex-start;
+        align-items: end;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+    
+    .login_heading span {
+        font-size: 28px;
+        background-color: #aaabbc;
+        color: #fff;
+        padding: 10px;
+        border-radius: 30px;
+        width: 50px;
+        text-align: center;
+    }
+    
+    .login_heading h4{
+        font-size: 30px;
+    }
+    
+    .forgot_password {
+        font-size: 12px;
+        font-weight: 700;
+        color: #000;
+        cursor: pointer;
+    }
+    
+    .forgot_password label{
+        margin-top: 6px;
+    }
+    
+    .login_btn {
+        width: 100%;
+        background-color: #fe5f55;
+        color: #fff;
+    }
+    
+    .different_login{
+        margin-top: 20px;
+    }
+    
+    .different_login p{
+        font-size: 14px;
+        font-weight: 500;
+        color: #102542;
+        margin-bottom: 15px;
+    }
+    
+    .social_links_div{
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .social_links_div .facebook {
+        font-size: 18px;
+        color: #005698;
+        font-weight: 700;
+        border: 1px solid #dfdede;
+        padding: 8px 13px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+        
+    }
+    
+    .social_links_div .google{
+        font-size: 18px;
+        color: #3a95dc;
+        font-weight: 700;
+        border: 1px solid #dfdede;
+        padding: 8px 19px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+        
+    }
+    
+    .social_links_div .apple{
+        font-size: 18px;
+        color: #000;
+        font-weight: 600;
+        border: 1px solid #dfdede;
+        padding: 8px 15px;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        cursor: pointer;
+    }
+    
+    .social_links_div .apple span{
+        font-size: 24px;
+    }
+    
+    label{
+        margin-bottom: 0 !important;
+    }
+    
+    
+    
+    
+    *,
+    *:focus{outline: none}
+    
+    .login_page_section .form{
+      width: 500px;
+      margin: 0 auto;
+      margin-top: 150px;
+      font-family: sans-serif;
+      background: #fff
+    }
+    .form-item{
+      position: relative;
+      margin-bottom: 15px
+    }
+    .form-item input{
+      display: block;
+      width: 400px;
+      height: 40px;
+      background: #fff;
+      border: solid 1px #ccc;
+      transition: all .3s ease;
+      padding: 0 15px
+    }
+    .form-item input:focus{
+      border-color: blue
+    }
+    .form-item label{
+      position: absolute;
+      cursor: text;
+      z-index: 2;
+      top: 13px;
+      left: 10px;
+      font-size: 12px;
+      font-weight: bold;
+      background: #fff;
+      padding: 0 10px;
+      color: #999;
+      transition: all .3s ease
+    }
+    .form-item input:focus + label,
+    .form-item input:valid + label{
+      font-size: 11px;
+      top: -5px
+    }
+    .form-item input:focus + label{
+      color: blue
+    }
+    
+    
+     
+
+
+    
