--- a/src/foodMarket/css/style.css
+++ b/src/foodMarket/css/style.css
@@ -1665,7 +1665,7 @@ div#accordion {
     
     .login_heading {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: end;
         gap: 20px;
         margin-bottom: 20px;
@@ -1813,6 +1813,12 @@ div#accordion {
     }
     .form-item input:focus + label{
       color: blue
+    }
+
+
+
+    #wwwefl{
+        z-index: 3 !important;
     }
     
     
