--- a/src/foodMarket/css/style.css
+++ b/src/foodMarket/css/style.css
@@ -1840,4 +1840,29 @@ div#accordion {
      
 
 
-    
+
+
+    .jumbotron-flat {
+        background-color: solid ;
+        height: 100%;
+        border: 1px solid #4DB8FF;
+        background: white;
+        width: 100%;
+      /* text-align: center; */
+      overflow: auto;
+      }
+      
+      .paymentAmt {
+          font-size: 80px; 
+      }
+      
+      /* .centered {
+          text-align: center;
+      }
+      
+      .title {
+       padding-top: 15px;   
+      } */
+
+
+ 
